This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _bsddb.c: Missing Py_DECREF() in DB_join()
Type: resource usage Stage: resolved
Components: Extension Modules Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, xiang.zhang
Priority: normal Keywords: patch

Created on 2018-08-24 21:15 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8909 merged ZackerySpytz, 2018-08-24 21:17
Messages (1)
msg324036 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2018-08-25 04:22
New changeset 032e85f3fb6d2e6668d4e860b40525ed6cb8dd69 by Xiang Zhang (Zackery Spytz) in branch '2.7':
bpo-34491: Add missing Py_DECREF() in _bsddb's DB_join() (GH-8909)
https://github.com/python/cpython/commit/032e85f3fb6d2e6668d4e860b40525ed6cb8dd69
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78672
2018-08-25 04:23:25xiang.zhangsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-08-25 04:22:29xiang.zhangsetnosy: + xiang.zhang
messages: + msg324036
2018-08-24 21:17:44ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8380
2018-08-24 21:15:18ZackerySpytzcreate