bpo-34491: Add missing Py_DECREF() in _bsddb's DB_join() (GH-8909)